fixed other projects on mobile

--- a/style.css
+++ b/style.css
@@ -941,6 +941,7 @@ nav .fa-solid{
     }
     .other-projects-card-container a{
         text-decoration: none;
+        background: transparent;
     }
     .other-projects-card{
         position: relative;
@@ -948,32 +949,41 @@ nav .fa-solid{
         width: 20em;
         height: 20em;
         color: #b7c5d3;
-        display: -ms-inline-grid;
+        display: inline-block;
         border: 2px solid transparent;
-        border-radius: 5px;
-        background: #2F4858;
+        border-radius: 15px;
+        background-color: #2F4858;
+        margin: 0;
+    }
+    .other-projects-card img{
+        width: 20em;
+        height: 11.25em;
+        border-radius: 15px;
+        padding: 0;
         margin: 0;
     }
     .other-projects-card span{
-        background: #2F4858;
-        display: inline-grid;
-        position: relative;
-        text-decoration: none;
-        text-align: center;
-        padding-top: 2em;
-        color: #82FFD8;
-        line-height: 1.25;
-        font-size: 24px;
-        font-weight: 500;
-        inline-size: 100%;
-    }
-    .other-projects-card p1{
-        background: #2F4858;
+        background: transparent;
         display: inline-grid;
         position: relative;
         text-decoration: none;
         text-align: left;
-        padding-top: 2em;
+        padding-top: 0.25em;
+        padding-bottom: 0.25em;
+        padding-inline: 0.3em;
+        width: auto;
+        color: #b7c5d3;
+        line-height: 1.25;
+        font-size: 24px;
+        font-weight: 500;
+        inline-size: auto;
+    }
+    .other-projects-card p1{
+        background: transparent;
+        display: inline-grid;
+        position: relative;
+        text-decoration: none;
+        text-align: left;
         padding-inline: 0.5em;
         color: #b7c5d3;
         line-height: 1.25;
